k8s/06-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-dashboard
  template:
    metadata:
      labels:
        app: banking-dashboard
    spec:
      serviceAccountName: banking-dashboard-sa
      containers:
        - name: banking-dashboard
          image: banking-dashboard:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
