k8s/06-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: banking
spec:
  clusterIP: None
  selector:
    app: postgres-db
  ports:
  - port: 5432
    targetPort: 5432
